[fix] java 17 compatability